<resources>
    <string name="app_name">AppliCV</string>
    <string name="lastname">Nom</string>
    <string name="firstname">Prénom</string>
    <string name="experiences">Expériences</string>
    <string name="kotlin">Kotlin</string>
    <string name="java">Java</string>
    <string name="c">C#</string>
    <string name="laravel">Laravel</string>
    <string name="swift">Swift</string>
    <string name="todo">TODO</string>
    <string name="competences">Compétences</string>
    <string name="_2023">2023</string>
    <string name="_2022">2022</string>
    <string name="_2021">2021</string>
    <string name="_2020">2020</string>
    <string name="_2019">2019</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="telephone">Telephone</string>
    <string name="title_activity_competence">CompetenceActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>