<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>
        <!-- HEADER-->
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="18dp"
        >

            <ImageView
                android:id="@+id/picture"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/chaton"
            />

            <LinearLayout
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_width="match_parent"
            >

                <TextView
                    android:id="@+id/text_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/lastname"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/text_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/firstname"
                    android:textSize="20sp"
                />

            </LinearLayout>

        </LinearLayout>

        <!-- BODY -->
        <LinearLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/competences"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="18dp"
                >

                <TextView
                    android:id="@+id/competences_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/competences"
                    android:textSize="20sp"
                    android:textAlignment="center"
                />

<!--                <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--                    android:id="@+id/add_competence"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:src="@drawable/ic_baseline_add_24"-->
<!--                    app:fabSize="mini"-->
<!--                    app:tint="@color/white">-->
<!--                </com.google.android.material.floatingactionbutton.FloatingActionButton>-->


                <!--                <ListView-->
<!--                    android:id="@+id/listCompetencesView"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    tools:listitem="@layout/competence_item"-->
<!--                />-->

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_competence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/competence_card"
                />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/experiences"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="18dp"
                >

                <TextView
                    android:id="@+id/experiences_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/experiences"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    />

                <Button
                    android:id="@+id/experience1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/_2023"

                    />

                <Button
                    android:id="@+id/experience2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/_2022"

                    />

                <Button
                    android:id="@+id/experience3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/_2021"

                    />

                <Button
                    android:id="@+id/experience4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/_2020"

                    />

                <Button
                    android:id="@+id/experience5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/_2019"

                    />
            </LinearLayout>

        </LinearLayout>

        <!-- FOOTER -->
        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="18dp"
            android:baselineAligned="false"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
        >

            <LinearLayout
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="18dp"
            >
                <TextView
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/contact"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="18dp"
            >
                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/email"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                />
                <TextView
                    android:id="@+id/telephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/telephone"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>

        </LinearLayout>

</LinearLayout>